Closed Bug 1393547 Opened 8 years ago Closed 8 years ago

missing nsACString declaration in mozilla/widget/nsPrimitiveHelpers.h

Categories

(Toolkit :: UI Widgets, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: aceman, Assigned: aceman)

Details

Attachments

(1 file)

I get build failure on current trunk saying: In file included from mozilla/widget/nsPrimitiveHelpers.cpp:23:0, from widget/Unified_cpp_widget2.cpp:2: mozilla/widget/nsPrimitiveHelpers.h:23:46: error: ‘nsACString’ does not name a type static void CreatePrimitiveForData ( const nsACString& aFlavor, const void* aDataBuff, ^ mozilla/widget/nsPrimitiveHelpers.h:33:47: error: ‘nsACString’ does not name a type static void CreateDataFromPrimitive ( const nsACString& aFlavor, nsISupports* aPrimitive, ^ mozilla/widget/nsPrimitiveHelpers.h:50:58: error: ‘nsACString’ does not name a type static nsresult ConvertPlatformToDOMLinebreaks ( const nsACString& inFlavor, void** ioData, int32_t* ioLengthInBytes ) ; ^ This started just several days ago. The file is missing inclusion of the nsACString declaration.
Attached patch patchSplinter Review
This makes the compilation progress past that file.
Attachment #8900853 - Flags: review?(mconley)
Looks similar to bug 1389408 / bug 1387912 and most likely only shows up for some due to unified-compilation dependencies.
Comment on attachment 8900853 [details] [diff] [review] patch Review of attachment 8900853 [details] [diff] [review]: ----------------------------------------------------------------- Thanks, aceman. Seems okay, but we should probably get somebody from widget/ to sign off on this.
Attachment #8900853 - Flags: review?(mconley)
Attachment #8900853 - Flags: review?(jmathies)
Attachment #8900853 - Flags: feedback+
Attachment #8900853 - Flags: review?(jmathies) → review+
Thanks jimm!
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/ad79eeeadb0a Add missing nsACString declarations in widget/nsPrimitiveHelpers.h. r=mconley
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: