Bug 1393547 - Add missing nsACString declarations in widget/nsPrimitiveHelpers.h. r=mconley